# flora-autonomous-garden

./: .gitignore  .ralphrc  README.md  flora.example.toml  flora.service  install.sh  pyproject.toml  setup_github.sh
.ralph/: PROMPT.md  fix_plan.md
docs/plans/: 2026-03-14-flora-phase2-pre-hardware.md
src/flora/: __init__.py  analytics.py  cli.py  config.py  db.py  main.py  notifications.py  scheduler.py
src/flora/actuators/: __init__.py  pump.py  smartplug.py
src/flora/agent/: __init__.py  loop.py  prompts.py  tools.py  watchers.py
src/flora/dashboard/: __init__.py  app.py  routes.py
src/flora/dashboard/templates/: actions.html  base.html  commissioning.html  index.html  logs.html  plant.html
src/flora/sensors/: __init__.py  bh1750.py  camera.py  miflora.py  sht31.py
tests/: conftest.py  test_actuators.py  test_agent_loop.py  test_agent_photo.py  test_agent_tools.py  test_ambient_card.py  test_analytics.py  test_auto_water.py  test_camera.py  test_camera_index.py  test_cli.py  test_commissioning.py  test_config.py  test_config_validation.py  test_critical_moisture_alert.py  test_dashboard.py  test_dashboard_e2e.py  test_health_api.py  test_history_api.py  test_notification_photos.py  test_notifications.py  test_plant_notes.py  test_plants_api.py  test_reading_age.py  test_scheduler.py  test_watering_cooldown.py  test_watering_watcher.py
